--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div class="page">
     <div class="digit"></div>
     <div class="kaufman"></div>
+    <header class="header"></header>
   </div>
 </body>
 
