Добавляет базовую стилизацию для вебинара по БЭМ

--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Научиться учиться</title>
+  <title>Document</title>
+  <link rel="stylesheet" href="./styles/index.css">
 </head>
 
-<body>
-  <div class="page">
-    <div class="digit"></div>
-    <div class="kaufman"></div>
-    <header class="header"></header>
-    <div class="footer"></div>
+<body class="page">
+  <p>Кнопка</p>
+  <a href="#" class="button button_type_primary">Красная кнопка</a>
+  <a href="#" class="button button_type_secondary">Красная кнопка</a>
+  <!-- <a href="#" class="button button_type_success">Красная кнопка</a>
+    <a href="#" class="button button_type_error">Красная кнопка</a> -->
+
+  <p>Карточка</p>
+  <div class="card">
+    <img src="http://via.placeholder.com/500/500" alt="Изображение" class="card__image">
+    <p class="card__name">Название</p>
+    <div class="card__buttons">
+      <a href="#" class="button button_type_primary">Купить</a>
+      <a href="#" class="button button_type_secondary">В корзину</a>
+    </div>
+  </div>
+
+
+  <div class="card  page__card">
+    <img src="http://via.placeholder.com/500/500" alt="Изображение" class="card__image">
+    <p class="card__name">Название</p>
+    <div class="card__buttons">
+      <a href="#" class="button button_type_primary">Купить</a>
+      <a href="#" class="button button_type_secondary">В корзину</a>
+    </div>
   </div>
 </body>
 
