Изменяет заголовок карточки

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <p>Карточка</p>
   <div class="card">
     <img src="http://via.placeholder.com/500/500" alt="Изображение" class="card__image">
-    <p class="card__name">Название</p>
+    <p class="card__name">Заголовок важный!</p>
     <div class="card__buttons">
       <a href="#" class="button button_type_primary">Купить</a>
       <a href="#" class="button button_type_secondary">В корзину</a>
